# c-demo

./: .gitignore  CMakeLists.txt  unp.md
kernel/kernel_file/: Makefile  kernel_file.c
kernel/kernel_first/: Makefile  kernel_first.c
src/: CMakeLists.txt
src/basic/: hello_world.c  password_hide.c
src/gdb_learn/: gdb_learn.c
src/http/: README.md  client.c  client_simple.c  server.c
src/k8s/: pause.c
src/namespace/: README.md  learn.c
src/tun/: README.md  count.c
test/: CMakeLists.txt  main_test.c
