add_executable(basic_hello basic/hello_world.c)
add_executable(http_client http/client.c)
add_executable(http_client_simple http/client_simple.c)
add_executable(http_server http/server.c)
add_executable(basic_password_hide basic/password_hide.c)
add_executable(k8s_pause k8s/pause.c)
add_executable(namespace_learn namespace/learn.c)
add_executable(tun_count tun/count.c)
add_executable(c-demo main.c)